Changes for using MySQL with this container and remove Ruby and NodeJS to make it PHP-only

--- a/container-files/etc/php-fpm.conf
+++ b/container-files/etc/php-fpm.conf
@@ -5,3 +5,10 @@ daemonize = no
 pid = /var/run/php-fpm.pid
 error_log = /data/logs/php-fpm-daemon.log
 log_level = warning
+
+[www]
+env[MYSQL_HOST] = $MYSQL_HOST
+env[MYSQL_DATABASE] = $MYSQL_DATABASE
+env[MYSQL_USER] = $MYSQL_USER
+env[MYSQL_PASSWORD] = $MYSQL_PASSWORD
+env[MYSQL_PORT] = $MYSQL_PORT
