--- a/container-files/etc/php.d/zz-php.ini
+++ b/container-files/etc/php.d/zz-php.ini
@@ -3,12 +3,12 @@ expose_php = Off
 memory_limit = 512M
 post_max_size = 128M
 upload_max_filesize = 128M
-date.timezone = UTC
+date.timezone = GMT
 max_execution_time = 120
 
 ; Error reporting
-display_errors = stderr
-display_startup_errors = Off
+display_errors = On
+display_startup_errors = On
 error_reporting = E_ALL
 
 ; A bit of performance tuning
@@ -18,3 +18,5 @@ realpath_cache_size = 128k
 opcache.max_accelerated_files = 32000
 opcache.memory_consumption = 128
 opcache.fast_shutdown = 0
+
+short_open_tag = On
